# fireagg

./: .env.example  .gitignore  .gmrc  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
migrations/: current.sql
migrations/committed/: 000001.sql  000002.sql
notebooks/: connector_latency_v2.parquet  db_insertion.ipynb  extract_data.ipynb
notebooks/market_latency/: btc_1500s.parquet  btc_300s.parquet  btc_xrp_60s_small_jump.parquet  bunch_30min.parquet
src/fireagg/: __main__.py  app.py  data_streams.py  metrics.py  settings.py
src/fireagg/connectors/: __init__.py  base.py  ccxt_connector.py  coincap_connector.py  cryptowatch_connector.py  factory.py
src/fireagg/connectors/impl/: _benchmark.py
src/fireagg/database/: db.py  symbol_prices.py  symbols.py
src/fireagg/input_streams/: base.py  ccxt_connector.py  factory.py
src/fireagg/input_streams/impl/: _benchmark.py
src/fireagg/processing/: base.py  connector.py  core.py  db_insertion.py  kv_adapter.py  message_bus.py  messages.py  queue_adapter.py  redis_adapter.py  true_mid_price.py
